<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    tools:context=".ui.about.AboutActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        tools:context=".ui.about.AboutActivity">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="25sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/minibus_dev"/>
        <ImageView
            android:id="@+id/img_leader"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/img_leader"
            android:contentDescription="@string/image_tim" />
        <TextView
            android:id="@+id/leader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_leader"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/img_leader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/name_leader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_leader"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/leader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/nim_leader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim_leader"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/name_leader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/ig_leader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ig_leader"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/nim_leader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/img_member1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/img_member1"
            app:layout_constraintTop_toBottomOf="@id/ig_leader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/image_tim" />
        <TextView
            android:id="@+id/member1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_member1"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/img_member1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/name_member1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_member1"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/member1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/nim_member1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim_member1"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/name_member1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/ig_member1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ig_member1"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/nim_member1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
            android:id="@+id/img_member2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/img_member2"
            app:layout_constraintTop_toBottomOf="@id/ig_member1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/image_tim" />
        <TextView
            android:id="@+id/member2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_member2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/img_member2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/name_member2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_member2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/member2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/nim_member2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim_member2"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/name_member2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/ig_member2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ig_member2"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/nim_member2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
            android:id="@+id/img_member3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/img_member3"
            app:layout_constraintTop_toBottomOf="@id/ig_member2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/image_tim" />
        <TextView
            android:id="@+id/member3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_member3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/img_member3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/name_member3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_member3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/member3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/nim_member3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim_member3"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/name_member3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/ig_member3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ig_member3"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/nim_member3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
